--- a/workers/dockerfile
+++ b/workers/dockerfile
@@ -5,4 +5,4 @@ WORKDIR /app
 RUN pip install -r requirements.txt
 RUN python -m nltk.downloader vader_lexicon
 
-ENTRYPOINT celery -A test_celery worker --loglevel=info
+ENTRYPOINT celery -A application worker --loglevel=info
