--- a/data-processor/Dockerfile-scheduler
+++ b/data-processor/Dockerfile-scheduler
@@ -5,4 +5,4 @@ WORKDIR /app
 RUN pip install -r requirements.txt
 RUN python -m nltk.downloader vader_lexicon
 
-CMD ["./scripts/run-dev"]
+CMD celery -A application beat -l debug
