--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - ./server/scripts:/usr/src/app/scripts
       - ./server/views:/usr/src/app/views
       - ./server/app.js:/usr/src/app/app.js
+      - ./server/node_modules:/usr/src/app/node_modules
       - ./server/package.json:/usr/src/app/package.json
       - ./server/package-lock.json:/usr/src/app/package-lock.json
   mongo:
